Fixing new question alignment 3

--- a/front-end/src/components/faq/faq.css
+++ b/front-end/src/components/faq/faq.css
@@ -149,39 +149,57 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     gap: 1rem;
     min-width: 30%;
+ 
 
     margin: 2rem 0;
     padding: 0;
     h2 {
+        display: flex;
+        width: 100%;
         padding-left: 2px;
+        text-align: left;
+      
     }
   
-
-
-    form {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        gap: 1rem;
-        min-width: 100%;
-    
-    
-    }
 }
+
+.new-question-form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    min-width: 100%;
+ 
+    /* display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    gap: 1rem;
+    width: 100%; */
+
+    /* input.textfield{
+        grid-column-start:1 ;
+        grid-column-end: 3;
+        width: 100%;
+    } */
+
+
+}
+
 
 
 @media screen and (max-width: 1024px){
 
     
 
-    form {
-       flex-direction: column;
-        min-width: 100%;
-    
+    .new-question-form {
+        display: flex;
+        flex-direction: row;
+     
+        
     }
 
     .questions-container{
